--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Patrick Grady
 
 <div class="home">
 
-  <h1 class="name">{{ post.title }}</h1>
+    <h1 class="name">Patrick <i class="white">Grady</i></h1>
+    <h2 class="subtitle">Programmer</h2>
 
 </div>
