--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ title: Patrick Grady
 
     <h1 class="name">Patrick<i class="white">Grady</i></h1>
     <h2 class="subtitle">Programmer</h2>
+    <p class="text">{{ site.description }}</p>
 
 </div>
