--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
----
-layout: default
-title: Patrick Grady
----
+<!DOCTYPE html>
+<html>
+<head>
 
-<div class="home">
+<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="style.css">
 
-    <h1 class="name">Patrick<i class="white">Grady</i></h1>
-    <h2 class="subtitle">Programmer</h2>
-    <p class="text">{{ site.description }}</p>
+</head>
+<body>
 
+<!-- <h1 id="patrick-j-grady">PATRICK J GRADY</h1> -->
+
+<!-- <div class="measure-bottom-left"></div>
+<div class="measure-top-left"></div>
+<div class="half"></div> -->
+
+
+<svg class="triangle-container" viewbox="0 0 100 100" preserveAspectRatio="none" vector-effect="non-scaling-stroke" height="100%" width="100%">
+    <!--Squares-->
+		<a href="#1" class="square-anchor" onclick="return checkClick('.about');"><polygon class="square1 square" points="50,24.7 0,0 50,-24.7 100,0" style="stroke-width:0.5" stroke-dasharray="240 240" stroke-dashoffset="240" /><text x="30.4" y="24.7" class="square-text" style="font-size:3">about me</text></a>
+  	<a href="#2" class="square-anchor" onclick="return checkClick('.web');"><polygon class="square2 square" points="50,24.7 100,0 150,24.7 100,50" style="stroke-width:0.5" stroke-dasharray="240 240" stroke-dashoffset="240" /><text x="76.2" y="24.7" class="square-text" style="font-size:3">web design</text></a>
+  	<a href="#3" class="square-anchor" onclick="return checkClick('.software');"><polygon class="square3 square" points="50,24.7 100,50 50,74.7 0,50" style="stroke-width:0.5" stroke-dasharray="240 240" stroke-dashoffset="240" /><text x="53.9" y="24.7"class="square-text" style="font-size:3">software</text><text x="50.9" y="28.7" class="square-text" style="font-size:3">development</text></a>
+  	<a href="#4" class="square-anchor" onclick="return checkClick('.animation');"><polygon class="square4 square" points="50,24.7 0,50 -50,24.7 0,0" style="stroke-width:0.5;" stroke-dasharray = "240 240" stroke-dashoffset = "240" /><text x="6.8" y="24.7"class="square-text" style="font-size:3">writing</text></a>
+
+    <!--background gifs-->
+    <!-- <defs>
+      <pattern id="square1-img" patternUnits="userSpaceOnUse" width="50" height="50" patternTransform="rotate(-25) skewX(30)">
+        <image xlink:href="oceanboy.jpeg" x="0" y="-10" width="75" height="70" />
+      </pattern>
+    </defs> -->
+
+    <!--Logo-->
+  	<polygon class="t1-side1 logo-anim" points="40,17.2 55,24.7" style="stroke:white; stroke-width:0.5" />
+  	<polygon class="t1-side2 logo-anim" points="55,24.7, 40,32.2" style="stroke:white; stroke-width:0.5" />
+  	<polygon class="t1-side3-bottom logo-anim" points="40,32.2 40,24.7" style="stroke:white; stroke-width:0.5" />
+  	<polygon class="t1-side3-top logo-anim" points="40,24.75 40,17.2" style="stroke:white; stroke-width:0.5" />
+  	<polygon class="t2-side1 logo-anim" points="59.3,17.2 44.3,24.7" style="stroke:white; stroke-width:0.5" />
+  	<polygon class="t2-side2 logo-anim" points="44.3,24.7, 59.3,32.2" style="stroke:white; stroke-width:0.5" />
+  	<polygon class="t2-side3-bottom logo-anim" points="59.3,32.2 59.3,24.7" style="stroke:white; stroke-width:0.5" />
+  	<polygon class="t2-side3-top logo-anim" points="59.3,24.75 59.3,17.2" style="stroke:white; stroke-width:0.5" />
+
+  	<!--Block to hide stuff on mobile-->
+</svg>
+
+<div class="quicknav">
 </div>
+
+<div class="animation">
+  <div class="animation-item item">
+    <h1 class="animation-header item-header">The Necessity of the Merchant</h1>
+    <p class="item-desc">The focus of this essay was on qualifiers, or additions to statements to enhance their persuasive strength. These qualifiers are used to show the requirements and such of an event for the provided statment to be true. They act much like concessions, giving a small amount of ease to the opposing arguement where necessary. The use of these had a major impact on this essay, and showed me a method in which I may improve my persuasive abilities. This work has a rather consistent prose, and the diction has improved since the previous works I have done. While they still need a lot of work, these skills are improving. The overall structure and flow are solid, however, and allow the reader to better understand what is going on in the writing and why everything is there.</p>
+    <h1 class="animation-header item-header">Man and Literature</h1>
+    <p class="item-desc">This essay was amongst my first several in which I was given a time limit - and it shows. Its strongest point is its structure. Even though it only has three paragraphs, these paragraphs each have a clear meaning, and are able to contribute to the final product. While it does maintain a solid structure, the rest of the essay suffered as a cost. The essay has no coherent flow, leaving the reader wondering where they are. Additionally, the example used is not explained until it has become mostly irrelevant. The essay’s inconsistent diction leaves it with no clear tone, further confusing the reader.</p>
+    <h1 class="animation-header item-header">The Viability of GMOs</h1>
+    <p class="item-desc">This is one of the first synthesis essays that I wrote. With the time limit that had become a standard by this time, it was rather difficult to create an essay in a format so new to me. This is apparent when looking at the end of the essay. There is no proper conclusion, but rather, it ends during a concession. This work does, however, show notable growth since the beginning of these timed essays. The elements of persuasion are much more apparent than before, as shown by the slightly improved use of sources and the use of a concession. Additionally, the thesis of this work is especially clear in its purpose, giving the reader a guide to how the rest of the work will flow. The diction and prose are still lacking, and fail to contribute to the work.</p>
+      <!-- <h1 class="animation-header animation-subheader item-header item-subheader">Animation Sub-Topic</h1>
+      <p class="item-desc">animation animation animation animation animation animation animation animation animation animation animation animation</p>
+      <h1 class="animation-header animation-subheader item-header item-subheader">Animation Sub-Topic</h1>
+      <p class="item-desc">animation animation animation animation animation animation animation animation animation animation animation animation</p>
+      <h1 class="animation-header animation-subheader item-header item-subheader">Animation Sub-Topic</h1>
+      <p class="item-desc">animation animation animation animation animation animation animation animation animation animation animation animation</p> -->
+    <h1 class="animation-header item-header">An Analysis of The Road</h1>
+    <p class="item-desc">This was the first essay I wrote for my AP Language and Composition class. It was an analysis of The Road, and was assigned as my summer reading to prepare for the class. This essay created a benchmark for my starting position in the class, showing the teacher what I could do well and what I could not. The structure and flow of this work are needing improvement, and fail to contribute to the reader’s experience. The diction, however, is much better. Careful choice of words gave this writing much more depth, in comparison to the other elements the piece. The syntax could also use some work, as it lacks proper variance.</p>
+    <h1 class="animation-header item-header">Growth Essay</h1>
+    <p class="item-desc">The exit exam for my first AP class. While I may not have become Dickinson in this short year, I certainly grew substantially. This essay is amongst my strongest, as it showcases my strengths as a writer moreso than my previous works. I still have a lot of room to grow, of course, but I haven't let that get in my way as I've continued to grow my talent in the field.</p>
+  </div>
+</div>
+
+<div class="web">
+    <h1 class="web-header item-header">Studio C</h1>
+    <p class="item-desc">During my time as a senior in high school, I was part of an intern organization sponsored by the school called Studio C. It is a web development company that designs and develops websites and related materials for members of the local community. I started out as a member of the coding department, but in January, I was promoted to manager of the department during a large management shift. At first unsure of how prepared I was for the task before me, I took caution when leading my team, ensuring there was ample talent and time given to each project. Over time, however, I learned to have confidence in myself and my team, and we quickly began to work through the many projects laid out before us. Below is a list of some of the projects I was a part of.</p>
+      <h1 class="web-header web-subheader item-header item-subheader">Marco's Pizza</h1>
+      <p class="item-desc">Marco's Pizza is a small pizza place located in Las Vegas. They came to us early in the year asking us to redesign their menu boards. While this may sound like a job purely for the design department, as I first thought it was, I was quickly proven wrong. While normally the company would be able to just put the picture designed by my more artistic colleagues up on the screens, they had made the decision to include a number of animations. As such, we designed static web pages for the boards to project, which were designed specifically for that screen size, as they would never be opened elsewhere. This helped to open my mind up to the concept of developing for multiple screen sizes, as I had only ever really concerned myself with how I saw it on my screen.</p>
+      <h1 class="web-header web-subheader item-header item-subheader">Homeskape</h1>
+      <p class="item-desc">Homeskape is a company that has made a rather unique niche for themselves in the market. To make it simple, they make posters that you plaster onto the inside of your windows which showcase an idealistic background, so that if you lived in a house or apartment with a poor view, you could easily just set these up and suddenly be on a beach in Hawaii. Their website was quite simple, having a landing page that explains the product, an installation guide to teach users how to set up the product, and a shop that allows users to select designs and sizes to create their dream windows. Not only was this my first time working with e-commerce, but it was also my first time working with Wordpress in general. And it wasn't nearly the last time either, as I would soon learn.</p>
+      <h1 class="web-header web-subheader item-header item-subheader">Thurman White Middle School</h1>
+      <p class="item-desc">Thurman White is a local middle school in Henderson, which has quite a few awards and feats to its name. Among its many recognitions and programs are its position as a Title 1 school, an impressive music program, and a sprawling list of clubs and athletics teams. For such an impressive school, we had to work our team harder than ever before to ensure they had the best site they could. And for such a kind and humble administration, we couldn't be happier to put in countless extra hours outside of the classroom to ensure each and every one of their requests was met. And it shows in the robust features and attention to detail given to the site.</p>
+      <h1 class="web-header web-subheader item-header item-subheader">Never Give Up Foundation</h1>
+      <p class="item-desc">The Never Give Up Foundation has one sole purpose - to bring aid to those who need it. Just as their name suggests, they will never give up on someone who needs help. This client came to the company just after we had our major management overhaul, so all of us greenhorns looked at this as our first major project. We took their message to heart during the development process, being sure to never give up on making the best website we could for them.</p>
+      <h1 class="web-header web-subheader item-header item-subheader">NAACP</h1>
+      <p class="item-desc">NAACP is a foundation made to give support to ethnic minorities in need. They came to us shortly after The Never Give Up Foundation, initially to create a single page to add to their website. After seeing the pristine quality of the design department's work, however, they quickly asked us to redesign the rest of the website for their local chapter. After this request, the design and code departments had to band together in a strange way. Sure, it's not unheard of to begin development on some web pages while others go through the design process, but since their original site was on Wix, and they didn't want to leave their service, we somehow wound up with the least likely member of the code department working on it alone. We had a designer who had joined our department to broaden his skills by watching us work, and he took very quickly to Wix, faster than the rest of us. So somehow a man who had never had a place in the code industry had suddenly sprung forward to tackle this new contender for a team who was far too used to Wordpress to transition. This taught me personally a lot about managing a team. Normally I never would have had him work independantly on a project, but this was a special case where I had to identify his unique skill and immediately put it to use.</p>
+      <h1 class="web-header web-subheader item-header item-subheader">CCSD Risk Management and Magnet Board of Directors Apps</h1>
+      <p class="item-desc">We were never taught how to make apps. So when our school district asked us to design not one, but two apps for them, the code department was scared to death. We had only heard tales of the treacherous learning curve involved in mobile app development. Luckily we stumbled upon a framework called Ionic, which took standard HTML, CSS, and Javascript, and compiled it into mobile apps. Unfortunately, it relied heavily on Angular.js, which none of us had worked with either. Eventually, it came down to myself and the previous manager, the two best coders in the group, to create both of the apps. It was a tough learning experience, but what we learned will stay with us for years to come, and will help us to grow as programmers and to be better prepared for future projects.</p>
+    <h1 class="web-header item-header">Gogo Robo Cleans the World!</h1>
+    <p class="item-desc">Gogo Robo Cleans the World! was my web design capstone, acting as a project that brings together everything I had learned throughout my courses. My partners and I decided to combine our skills in web design with our passion for game design, while also creating a message about the importance of recycling to deliver to the players. My role was that of a programmer and an animator. In this project, I learned an unbelievable amount about Javascript and animation, as those were the two mediums through which I worked most of my magic. Before this project, I had never really worked with either of these all that much, but now they both hold a special place for me. Javascript has become my favorite part of web design, and I will always try to incorporate it into a website somehow, for some fancy effect to wow users. Animation is slowly becoming a hobby of mine, and I hope to one day put it to good use again in my work.</p>
+</div>
+
+<div class="software">
+  <h1 class="software-header item-header">Virtual Piano</h1>
+  <p class="item-desc">In my high school AP computer science class, we spent the vast majority of the time learning Java. We split up into teams of three, and learned together in those pods. I wound up in the strongest overall team, holding two of the previously best programmers and one of the best designers. So when we were given the chance to create a program free of limitations, we weren't going to take the easy way out. We went straight for the two topics we knew the least about - user interface and audio. I was in charge of creating the UI, and found it to be much more difficult than I imagined. I chose to teach myself how to use grid bag layout, which is one fo the most commonly used layouts in the industry, to my knowledge at least. It was difficult to learn, but I wound up understanding the language much better as a result. As for the audio, I came into that part of the project when it was nearly complete, and regrettibly didn't have the chance to learn much about it. Perhaps in a future project this will change, however.</p>
+</div>
+
+<div class="about">
+  <h1 class="about-header item-header">About Me</h1>
+  <p class="item-desc">Hi, I'm Patrick Grady. I do coding things. Talking about myself isn't really my thing, but I can guarentee you I know what I'm doing. I currently do freelance work as a website developer, mostly working with the coding side of things, but I am capable of doing designs aswell. I dream of creating software, however, and am currently learning the languages and skills needed for that specific field.</p>
+  <h1 class="about-header item-header">Skills</h1>
+  <p class="item-desc">As the rest of this website outlines, I take great pride in my programming abilities. As for the languages I know, they are currently limited to the following: HTML5, CSS, Javascript, PHP, and Java. Alongside that, I am proficient with Wordpress and similar CMS.</p>
+  <h1 class="about-header item-header">Certifications and Awards</h1>
+  <p class="item-desc">I am currently a certified professional with Adobe Illustrator, Photoshop, and Flash.</p>
+</div>
+
+<div class="back">
+  <a href="#" class="back-text">go back</a>
+</div>
+
+<script src="jquery-2.2.3.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
